MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/CreditNote__c.object-meta.xml
<CustomObject>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Credit Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>