MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>