MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/CreditNoteExternalId__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteExternalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Credit Note External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>