MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/CreditNoteTrxNumber__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteTrxNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Note Trx Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>