MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/CustomerTrxId__c.field-meta.xml
<CustomField>
    <fullName>CustomerTrxId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Trx Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>