MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/Integration_Description__c.field-meta.xml
<CustomField>
    <fullName>Integration_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>