MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Status</valueSetName>
    </valueSet>
</CustomField>