MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/Is_ADM_Fees_and_Dari_charges__c.field-meta.xml
<CustomField>
    <fullName>Is_ADM_Fees_and_Dari_charges__c</fullName>
    <formula>Invoice__r.Is_ADM_Fees_and_Dari_charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is ADM Fees and Dari Charges</label>
    <type>Checkbox</type>
</CustomField>