MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/OIC_Id__c.field-meta.xml
<CustomField>
    <fullName>OIC_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>OIC Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>