MODON MRE BPDEV/force-app/main/default/objects/CreditNote__c/fields/PostedDate__c.field-meta.xml
<CustomField>
    <fullName>PostedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>